--- a/doc/src/content/docs/index.mdx
+++ b/doc/src/content/docs/index.mdx
@@ -6,11 +6,11 @@ hero:
   tagline: Muffy, the static website validator.
   actions:
     - text: Get started
-      link: /muffy/install
+      link: /aruba-go/install
       icon: right-arrow
       variant: primary
     - text: GitHub
-      link: https://github.com/raviqqe/muffy
+      link: https://github.com/raviqqe/aruba-go
       icon: github
       variant: secondary
   image:
